feat-login-google

--- a/StreamingMovie.Web/Views/Account/Login.cshtml
+++ b/StreamingMovie.Web/Views/Account/Login.cshtml
@@ -75,7 +75,15 @@
                                     Facebook
                                 </a>
                             </li>
-                            <li><a href="#" class="google"><i class="fa fa-google"></i> Sign in With Google</a></li>
+                            <li>
+                                <form asp-action="ExternalLogin" asp-controller="Account" method="post">
+                                    <input type="hidden" name="provider" value="Google" />
+                                    <input type="hidden" name="returnUrl" value="@ViewData["ReturnUrl"]" />
+                                    <button type="submit" class="google">
+                                        <i class="fa fa-google"></i> Sign in With Google
+                                    </button>
+                                </form>
+                            </li>
                         </ul>
                     </div>
                 </div>
