--- a/StreamingMovie.Web/Views/Account/AccessDenied.cshtml
+++ b/StreamingMovie.Web/Views/Account/AccessDenied.cshtml
@@ -5,7 +5,7 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <title>404 - Page not found</title>
+    <title>403 - Forbidden</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Mulish:wght@400;600&display=swap" rel="stylesheet">
     <style>
@@ -55,9 +55,9 @@
 </head>
 <body>
     <div class="error-container">
-        <div class="error-code">404</div>
-        <div class="error-message">Page not found</div>
-        <p class="error-description">Sorry! The page you requested does not exist or has been deleted.</p>
+        <div class="error-code">403</div>
+        <div class="error-message">Forbidden</div>
+        <p class="error-description">Sorry! You don't have permission to access this page.</p>
         <p><a href="/" class="home-link">Back to Homepage</a></p>
     </div>
 </body>
