--- a/StreamingMovie.Web/wwwroot/css/style.css
+++ b/StreamingMovie.Web/wwwroot/css/style.css
@@ -715,6 +715,7 @@ ol {
 
 .product__item__text {
 	padding-top: 20px;
+	padding-bottom: 30px;
 }
 
 .product__item__text ul {
@@ -1188,7 +1189,7 @@ ol {
 .anime__details__form form textarea {
 	width: 100%;
 	font-size: 15px;
-	color: #b7b7b7;
+	color: #111111;
 	padding-left: 20px;
 	padding-top: 12px;
 	height: 110px;
@@ -1716,7 +1717,7 @@ ol {
 	width: 100%;
 	background: #ffffff;
 	font-size: 15px;
-	color: #a6a6a6;
+	color: #111111;
 	padding-left: 20px;
 	border-radius: 2px;
 	padding-top: 12px;
@@ -2422,3 +2423,8 @@ img {
 	object-fit: cover;
 /*	object-position: top;*/
 }
+
+.truncate {
+	white-space: nowrap; 
+	overflow: hidden; 
+	text-overflow: ellipsis;
