--- a/StreamingMovie.Web/wwwroot/css/style.css
+++ b/StreamingMovie.Web/wwwroot/css/style.css
@@ -338,7 +338,7 @@ ol {
 	width: 100%;
 	z-index: 1000;
 	transition: background-color 0.3s ease;
-	background: linear-gradient(to bottom, rgba(7, 7, 32, 0.2), rgba(7, 7, 32, 0.8));
+	background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
 }
 	.header.scrolled {
 		background-color: #070720;
@@ -2425,6 +2425,37 @@ img {
 }
 
 .truncate {
-	white-space: nowrap; 
-	overflow: hidden; 
+	white-space: nowrap;
+	overflow: hidden;
 	text-overflow: ellipsis;
+}
+
+.movie-detail-wrapper {
+	background-size: 100% auto; 
+	background-repeat: no-repeat;
+	background-position: center top;
+	background-color: #0b122a;
+	position: relative;
+}
+
+.movie-detail-wrapper::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: linear-gradient(
+		to bottom,
+		rgba(11, 18, 42, 0) 0%,
+		rgba(11, 18, 42, 1) 50%,
+		rgba(11, 18, 42, 1) 100%
+	);
+	pointer-events: none;
+}
+
+.detail-movie-card {
+	background-color: rgba(0, 8, 0, 0.6);
+	border-radius: 20px;
+	height: 485px;
+}
