--- a/StreamingMovie.Web/Views/Home/Components/HeroSlider/Default.cshtml
+++ b/StreamingMovie.Web/Views/Home/Components/HeroSlider/Default.cshtml
@@ -4,7 +4,7 @@
 <div class="hero__slider owl-carousel">
     @foreach (var movie in Model)
     {
-        <div class="hero__items set-bg" style="height: 60vh;" data-setbg="@Url.Content(movie.BannerUrl)">
+        <div class="hero__items set-bg" data-setbg="@Url.Content(movie.BannerUrl)">
             <div class="row">
                 <div class="col-lg-6">
                     <div class="hero__text">
