--- a/StreamingMovie.Web/Views/Movie/Watching.cshtml
+++ b/StreamingMovie.Web/Views/Movie/Watching.cshtml
@@ -392,11 +392,12 @@
                     <div class="section-title">
                         <h5>Your Comment</h5>
                     </div>
-                    <form action="#">
+                    <form action="#">c
                         <textarea placeholder="Your Comment"></textarea>
                         <button type="submit"><i class="fa fa-location-arrow"></i> Review</button>
                     </form>
                 </div>
+                @await Html.PartialAsync("_CommentSection", ("movie", 1))
             </div>
         </div>
     </div>
