--- a/StreamingMovie.Web/Views/Movie/Components/Rating/Default.cshtml
+++ b/StreamingMovie.Web/Views/Movie/Components/Rating/Default.cshtml
@@ -42,12 +42,10 @@
                         <i class="fa fa-ellipsis-v"></i>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-end" style="min-width: 120px; font-size: 0.85rem; padding: 0.25rem 0.5rem;">
-                        <li>
-                            <a class="dropdown-item" href="#" data-bs-toggle="modal"
+                        <li style="display: flex; gap: 8px; justify-content: center; align-items: center;">
+                            <a href="#" class="text-primary" href="#" data-bs-toggle="modal"
                                data-bs-target="#editModal-@rating.Id">Edit</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item text-danger" href="#" data-bs-toggle="modal"
+                            <a href="#" class="text-danger" href="#" data-bs-toggle="modal"
                                data-bs-target="#deleteModal-@rating.Id">Delete</a>
                         </li>
                     </ul>
