--- a/StreamingMovie.Web/Views/Movie/Watching.cshtml
+++ b/StreamingMovie.Web/Views/Movie/Watching.cshtml
@@ -424,12 +424,12 @@
         </div>
         <div class="row">
             <div class="col-lg-8">
-                <div class="anime__details__review">
+                @* <div class="anime__details__review">
                     <div class="section-title">
                         <h5>Comments</h5>
                     </div>
                     @await Component.InvokeAsync("Comment", new { slug = "breaking-bad", episodeId = 1 })
-                </div>
+                </div> *@
 
 
                 @await Html.PartialAsync("_CommentSection", ("movie", Model.Id))
