--- a/StreamingMovie.Web/Views/Shared/_Layout.cshtml
+++ b/StreamingMovie.Web/Views/Shared/_Layout.cshtml
@@ -22,44 +22,6 @@
     <link rel="stylesheet" href="~/css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="~/css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="~/css/style.css" type="text/css">
-
-    <style>
-        .dropdown-menu {
-            background-color: #0b122a !important; 
-            color: #fff !important;
-            padding: 0.5rem 0;
-            min-width: 120px;
-            border: none;
-        }
-
-        .dropdown-menu .dropdown-item {
-            background-color: transparent;
-            color: #fff !important; 
-            padding: 0.5rem 1rem;
-        }
-
-        .dropdown-menu .dropdown-item:hover {
-            color: #ffffff !important; 
-            background-color: transparent !important;
-            font-weight: 600; 
-        }
-
-        .dropdown-menu form button {
-            background: none;
-            border: none;
-            color: #fff !important;
-            padding: 0.5rem 1rem;
-            text-align: left;
-            width: 100%;
-            }
-
-        .dropdown-menu form button:hover {
-            color: #f5f5f5 !important;
-            background-color: transparent !important;
-        }
-
-    </style>
-
 </head>
 <body>
     <!-- Page Preloder -->
@@ -225,7 +187,7 @@
     <script src="~/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-
+    @await Html.PartialAsync("_NotificationPartial")
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
