fix movie detail

--- a/StreamingMovie.Web/Views/Movie/Details.cshtml
+++ b/StreamingMovie.Web/Views/Movie/Details.cshtml
@@ -131,7 +131,7 @@
                     @if (Model.UserReview == null)
                     {
                         <div class="anime__details__form">
-                            <form>
+                            <form class="d-flex justify-content-end">
                                 <button type="button" data-bs-toggle="modal" data-bs-target="#ratingModal">
                                     <i class="fa fa-location-arrow"></i> Review
                                 </button>
