--- a/StreamingMovie.Web/Views/Movie/Details.cshtml
+++ b/StreamingMovie.Web/Views/Movie/Details.cshtml
@@ -11,9 +11,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcrumb__links">
-                        <a href="./index.html"><i class="fa fa-home"></i> Home</a>
-                        <a href="./categories.html">Categories</a>
-                        <span>Romance</span>
+                        <a asp-action="Index" asp-controller="Home"><i class="fa fa-home"></i> Home</a>
+                        <span>@Model.Title</span>
                     </div>
                 </div>
             </div>
@@ -111,7 +110,7 @@
                                         </div>
                                     </div>
 
-                                    <a asp-action="Watching" asp-controller="Movie" asp-route-id="@Model.Id" class="watch-btn">
+                                    <a asp-action="Watching" asp-controller="Movie" asp-route-slug="@Model.Slug" class="watch-btn">
                                         <span>Watch Now</span> <i class="fa fa-angle-right"></i>
                                     </a>
                                 </div>
