--- a/StreamingMovie.Web/Views/Movie/Watching.cshtml
+++ b/StreamingMovie.Web/Views/Movie/Watching.cshtml
@@ -318,8 +318,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="breadcrumb__links">
-                    <a href="/"><i class="fa fa-home"></i> Home</a>
-                    <a href="/movies">Movies</a>
+                    <a asp-action="Index" asp-controller="Home"><i class="fa fa-home"></i> Home</a>
                     <span>@Model.Title</span>
                 </div>
             </div>
