--- a/StreamingMovie.Web/wwwroot/css/style.css
+++ b/StreamingMovie.Web/wwwroot/css/style.css
@@ -2611,3 +2611,8 @@ img {
             color: #f5f5f5 !important;
             background-color: transparent !important;
         }
+
+.anime__review__item .dropdown-menu {
+    width: auto !important;
+    min-width: unset !important;
+}
