--- a/StreamingMovie.Web/Views/Movie/Details.cshtml
+++ b/StreamingMovie.Web/Views/Movie/Details.cshtml
@@ -79,11 +79,24 @@
                                     </div>
                                 </div>
                                 <div class="anime__details__btn h-100 d-flex align-content-end">
-
-                                    @* <a href="#" class="follow-btn">
-                                        <i class="fa fa-heart-o"></i>
-                                        <i class="fa fa-heart"></i>
-                                    </a> *@
+                                    @if (!Model.IsUserFavorite)
+                                    {
+                                        <form asp-action="AddFavorite" asp-controller="Favorite" method="post">
+                                            <input type="hidden" name="slug" value="@Model.Slug" />
+                                            <button type="submit" class="site-btn">
+                                                <i class="fa fa-heart-o"></i>
+                                            </button>
+                                        </form>
+                                    }
+                                    else
+                                    {
+                                        <form asp-action="RemoveFavorite" asp-controller="Favorite" method="post">
+                                            <input type="hidden" name="slug" value="@Model.Slug" />
+                                            <button type="submit" class="site-btn">
+                                                <i class="fa fa-heart"></i>
+                                            </button>
+                                        </form>
+                                    }
 
                                     <a href="#" class="follow-btn" id="trailerBtn"
                                        data-bs-toggle="modal"
@@ -130,7 +143,7 @@
                     @if (Model.UserReview == null)
                     {
                         <div class="anime__details__form">
-                            <form class="d-flex justify-content-end">
+                            <form class="d-flex justify-content-center">
                                 <button type="button" data-bs-toggle="modal" data-bs-target="#ratingModal">
                                     <i class="fa fa-location-arrow"></i> Review
                                 </button>
