--- a/StreamingMovie.Web/Views/Movie/_CommentSection.cshtml
+++ b/StreamingMovie.Web/Views/Movie/_CommentSection.cshtml
@@ -6,10 +6,13 @@
 
 <div class="anime__details__review">
     <div class="section-title">
-        <h5>Reviews</h5>
+        <h5>Comments</h5>
     </div>
     <div id="commentsList">
-        @await Component.InvokeAsync("Comment", new { slug = "the-dark-knight-2008" })
+        @{
+            var slug = Context.Request.Query["slug"].ToString();
+        }
+        @await Component.InvokeAsync("Comment", new { slug = slug })
     </div>
 </div>
 
@@ -51,7 +54,7 @@
         const commentHtml = `
             <div class="anime__review__item">
                 <div class="anime__review__item__pic">
-                    <img src="${comment.avatar}" alt="">
+                    <img src="${comment.Avatar}" alt="">
                 </div>
                 <div class="anime__review__item__text">
                    <div class="d-flex justify-content-between align-items-start">
