--- a/StreamingMovie.Web/Views/Movie/_MovieListPartial.cshtml
+++ b/StreamingMovie.Web/Views/Movie/_MovieListPartial.cshtml
@@ -16,7 +16,7 @@
     else
     {
         <div class="col-12 text-center text-white my-5">
-            <h5>No result found.</h5>
+            <h5>No result found</h5>
         </div>
     }
 </div>
